@@ -332,6 +332,31 @@ module Amalgalite
     end
 
     ##
+    # Execute a sql statment, and only return the first row of results.  This
+    # is a shorthand method when you only want a single row of results from a
+    # query.
+    #
+    # It is in all other was, exactly like #execute()
+    #
+    def first_row_from( sql, *bind_params ) 
+      stmt = prepare( sql )
+      stmt.bind( *bind_params)
+      row = stmt.next_row
+      stmt.close
+      return row
+    end
+
+    ##
+    # Execute an sql statement, and return only the first column of the first
+    # row.  
+    #
+    # It is in all other ways, exactly like #first_row_from()
+    #
+    def first_value_from( sql, *bind_params )
+      return first_row_from( sql, *bind_params).first
+    end
+
+    ##
     # call-seq:
     #   db.trace_tap = obj 
     #
